feat(api): activate RFC 9457 ProblemDetail error responses
- All six domain exceptions (LineNotFound, LineAlreadyExists,
  BusinessRuleViolated, IdempotencyKeyReused, PreconditionRequired,
  StaleStateIdentified) now extend Spring's ErrorResponseException instead of
  a plain RuntimeException + @ResponseStatus, so they carry their own
  ProblemDetail body.
- Replace OptimisticLockingExceptionHandler with ApiExceptionHandler, which
  extends ResponseEntityExceptionHandler directly as our own bean rather than
  relying on Boot's autoconfigured equivalent -- that one is
  @ConditionalOnMissingBean(ResponseEntityExceptionHandler.class), and in
  this app the condition resolved inconsistently across runs, silently
  falling back to the classic {timestamp,status,error,path} shape. Owning
  the bean makes application/problem+json responses deterministic.
- Add spring.mvc.problemdetails.enabled=true for framework-level failures
  (malformed bodies, unmapped routes, ...) to get the same treatment.
- Cover the new behaviour with LineControllerITTest$ErrorResponses (domain
  404/422, framework 400) and a documented example in
  LineApiDocumentationTest; add the "Error responses" section to the API
  guide explaining the shared envelope.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>