@@ -2,7 +2,8 @@ package li.selman.optimisticlocking.line;
 
 import org.jmolecules.architecture.onion.simplified.DomainRing;
 import org.springframework.http.HttpStatus;
-import org.springframework.web.bind.annotation.ResponseStatus;
+import org.springframework.http.ProblemDetail;
+import org.springframework.web.ErrorResponseException;
 
 /**
  * Thrown when a PUT-create targets an id that already exists with different content.
@@ -10,10 +11,13 @@ import org.springframework.web.bind.annotation.ResponseStatus;
  * genuine 409 Conflict rather than a 412.
  */
 @DomainRing
-@ResponseStatus(HttpStatus.CONFLICT)
-public class LineAlreadyExists extends RuntimeException {
+public class LineAlreadyExists extends ErrorResponseException {
 
     public LineAlreadyExists(LineId id) {
-        super(String.format("Line %s already exists with different content", id));
+        super(
+                HttpStatus.CONFLICT,
+                ProblemDetail.forStatusAndDetail(
+                        HttpStatus.CONFLICT, "Line %s already exists with different content".formatted(id)),
+                null);
     }
 }
